--- a/scss/main.scss
+++ b/scss/main.scss
@@ -328,7 +328,7 @@ body {
       text-align: center;
       transition: 0.4s;
       background: {
-        image: url("../images/main/sec02_bg_0.png");
+        image: url("./images/main/sec02_bg_0.png");
         repeat: no-repeat;
         position: center;
       }
@@ -565,7 +565,7 @@ body {
           }
           &:hover .btn-title {
             background: {
-              image: url("../images/main/more_plus.png");
+              image: url("./images/main/more_plus.png");
               repeat: no-repeat;
               position: 90%;
             }
@@ -574,7 +574,7 @@ body {
           }
           .btn-title {
             background: {
-              image: url("../images/main/more_plus.png");
+              image: url("./images/main/more_plus.png");
               repeat: no-repeat;
               position: 90%;
               size: 12px;
@@ -681,7 +681,7 @@ body {
         .btn-inner {
           .btn-title {
             background: {
-              image: url("../images/main/b_more_plus.png");
+              image: url("./images/main/b_more_plus.png");
               repeat: no-repeat;
               position: 90%;
             }
@@ -697,7 +697,7 @@ body {
             transition: all 0.6s cubic-bezier(0.785, 0.135, 0.15, 0.86), color 0.6s cubic-bezier(0.785, 0.135, 0.15, 0.86);
             &:hover {
               background: {
-                image: url("../images/main/more_plus.png");
+                image: url("./images/main/more_plus.png");
                 repeat: no-repeat;
                 position: 90%;
               }
@@ -986,7 +986,7 @@ body {
         }
         &:hover .btn-title {
           background: {
-            image: url("../images/main/more_plus.png");
+            image: url("./images/main/more_plus.png");
             repeat: no-repeat;
             position: 90%;
           }
@@ -995,7 +995,7 @@ body {
         }
         .btn-title {
           background: {
-            image: url("../images/main/b_more_plus.png");
+            image: url("./images/main/b_more_plus.png");
             repeat: no-repeat;
             position: 90%;
           }
@@ -1046,7 +1046,7 @@ body {
       //   }
       //   &:hover .btn-title {
       //     background: {
-      //       image: url("../images/main/more_plus.png");
+      //       image: url("./images/main/more_plus.png");
       //       repeat: no-repeat;
       //       position: 90%;
       //     }
@@ -1055,7 +1055,7 @@ body {
       //   }
       //   .btn-title {
       //     background: {
-      //       image: url("../images/main/b_more_plus.png");
+      //       image: url("./images/main/b_more_plus.png");
       //       repeat: no-repeat;
       //       position: 90%;
       //     }
@@ -1206,7 +1206,7 @@ body {
         }
         .btn-title {
           background: {
-            image: url("../images/main/more_plus.png");
+            image: url("./images/main/more_plus.png");
             repeat: no-repeat;
             position: 90%;
             size: 12px;
