--- a/scss/sub-contents.scss
+++ b/scss/sub-contents.scss
@@ -26,7 +26,7 @@
   }
   .m_section07 {
     background: {
-      image: url("../images/brand/about_mo05.png");
+      image: url("./images/brand/about_mo05.png");
       repeat: no-repeat;
       position: center;
       size: 100%;
@@ -181,7 +181,7 @@
     position: relative;
     height: 750px;
     background: {
-      image: url("../images/brand/about_bg.png");
+      image: url("./images/brand/about_bg.png");
       repeat: no-repeat;
       position: center;
     }
@@ -348,7 +348,7 @@
   }
   .section05 {
     background: {
-      image: url("../images/brand/about_bg03.png");
+      image: url("./images/brand/about_bg03.png");
       repeat: no-repeat;
       position: center;
     }
