--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -246,7 +246,7 @@
       .slide-nav {
         bottom: 45px;
         li {
-          width: 374px;
+          width: 340px;
           .main_tit {
             font-size: clamp(12px, 1.2vw, 16px);
           }
@@ -391,6 +391,7 @@
       .slide-nav {
         li {
           margin-right: 20px;
+          width: 300px;
         }
         li:not(.on) {
           width: 50px;
@@ -428,6 +429,7 @@
 @media all and (max-width: 1024px) {
   #wrap {
     #section02 {
+      padding: 80px 0 100px;
       .contents-wrap {
         .cont-img {
           > li {
@@ -463,6 +465,7 @@
       }
     }
     #section02 {
+      padding: 131px 0 74px;
       .page.bath-slide {
         padding-left: 0;
         width: 100%;
@@ -474,7 +477,7 @@
         left: 35px;
         transform: translateY(-50%);
         background: {
-          image: url("./images/main/slide_prev_w.png");
+          image: url("../images/main/slide_prev_w.png");
           repeat: no-repeat;
           position: center;
         }
@@ -489,7 +492,7 @@
         right: 15px;
         transform: translateY(-50%);
         background: {
-          image: url("./images/main/slide_next_w.png");
+          image: url("../images/main/slide_next_w.png");
           repeat: no-repeat;
           position: center;
         }
@@ -540,8 +543,8 @@
         height: 47px;
         line-height: 45px;
         width: 150px;
-        &:hover .btn-title {
-        }
+        // &:hover .btn-title {
+        // }
         .btn-title {
           background: {
             position: 88%;
@@ -607,7 +610,7 @@
         background: #326aff;
         .btn-title {
           background: {
-            image: url("./images/main/more_plus.png");
+            image: url("../images/main/more_plus.png");
             repeat: no-repeat;
             position: 88%;
             size: 12px;
@@ -825,6 +828,7 @@
       .slide-nav {
         li {
           margin-right: 10px;
+          width: 205px;
         }
         li:not(.on) {
           width: 25px;
@@ -837,6 +841,9 @@
     #section02 {
       .page {
         padding: 0 15px;
+      }
+      .page.bath-slide {
+        padding: 0;
       }
     }
     .m_section04 {
