--- a/scss/main.scss
+++ b/scss/main.scss
@@ -191,10 +191,10 @@ body {
         vertical-align: middle;
         position: relative;
         display: inline-block;
-        width: 22%;
+        width: 22.73%;
         overflow: hidden;
         transition: 0.3s;
-        margin-right: 1.2%;
+        margin-right: 1.29%;
         &:last-child {
           margin-right: 0;
         }
@@ -224,69 +224,69 @@ body {
             }
             .bot_txt {
               opacity: 1;
-              ::before {
+              &:before {
                 opacity: 1;
               }
             }
           }
         }
-        a {
+        a,
+        > div {
           display: block;
-        }
-        .cont-txt {
-          padding: 35px 30px 66px;
-          text-align: left;
-          z-index: 9;
-          transition: 0.5 ease-in;
-          > div {
-            position: relative;
-            width: 100%;
-            height: 100%;
-          }
-          .top_txt {
-            font-size: 20px;
-            font-weight: 600;
-            color: #fff;
-            position: relative;
-            display: inline-block;
-            line-height: 1;
-            transition: 0.3s;
-            &:before {
-              position: absolute;
-              content: "";
-              background-color: #fff;
-              left: 0;
-              width: 100%;
-              height: 2px;
-              opacity: 0;
-              bottom: -6px;
-              transition: 0.3s;
-            }
-          }
-          .bot_txt {
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            color: #fff;
-            font-weight: 500;
-            line-height: 1.47;
-            font-size: 25px;
-            display: inline-block;
-            opacity: 0;
-            transition: 0.5s ease-in;
-            letter-spacing: -2.38px;
-          }
-          img {
-            border: 0;
-            vertical-align: middle;
-            max-width: 100%;
-            border-radius: 30px;
-          }
+          position: relative;
         }
       }
     }
     .cont-txt {
+      padding: 35px 30px 66px;
+      text-align: left;
+      z-index: 9;
+      transition: 0.5s ease-in;
       word-break: keep-all;
+      > div {
+        position: relative;
+        width: 100%;
+        height: 100%;
+      }
+      .top_txt {
+        font-size: 20px;
+        font-weight: 600;
+        color: #fff;
+        position: relative;
+        display: inline-block;
+        line-height: 1;
+        transition: 0.3s;
+        &:before {
+          position: absolute;
+          content: "";
+          background-color: #fff;
+          left: 0;
+          width: 100%;
+          height: 2px;
+          opacity: 0;
+          bottom: -6px;
+          transition: 0.3s;
+        }
+      }
+      .bot_txt {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        color: #fff;
+        font-weight: 500;
+        line-height: 1.47;
+        font-size: 25px;
+        display: inline-block;
+        opacity: 0;
+        transition: 0.5s ease-in;
+        letter-spacing: -2.38px;
+      }
+      img {
+        border: 0;
+        vertical-align: middle;
+        max-width: 100%;
+        border-radius: 30px;
+      }
     }
   }
   .contents-wrap {
